--- a/styles/pages.css
+++ b/styles/pages.css
@@ -22,17 +22,24 @@ body{
 /* Customize Main */
 main{
     /* || Layout */
+    margin: 1em;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100%;
-}
-h1{
-    margin: .5em;
-    align-self: center;
     text-align: center;
 }
+
+h1{
+    margin: .5em;
+    text-align: center;
+}
+
+h2{
+    margin-top: .3em;
+    font-size: 5rem;
+}
+
 
 
 /* bearr */
@@ -59,4 +66,27 @@ aside:hover{
     transition: 500ms ease-in-out;
     height: 9rem;
     opacity: .8;
+}
+
+
+/* table customization */
+table{
+    width: 35%;
+}
+
+table,td,th{
+    margin-top: 2em;
+    border: 2px solid black;
+    border-collapse: collapse;  
+    padding: .5em;
+}
+
+th{
+    font-size: 1.5rem;
+}
+
+.go-back{
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
 }
